versions/v2.8/modules/en/pages/integrations/fleet/fleet.adoc
= {fleet-product-name}
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}

Fleet orchestrates and manages the continuous delivery of applications through the supply chain for fleets of clusters. Fleet organizes the supply chain to help teams deliver with confidence and trust in a timely manner using GitOps as a safe operating model.

== {fleet-product-name} with Rancher

Many users often manage over 10 clusters at a time. Given the proliferation of clusters, continuous delivery is an important part of Rancher. Fleet ensures a reliable continuous delivery experience using GitOps, which is a safe and increasingly common operating model.

=== When should I use {fleet-product-name}?

* I need to deploy my monitoring stack (e.g., Grafana, Prometheus) across geographical regions, each with different retention policies.
* I am a platform operator and want to provision clusters with all components using a scalable and safe operating model (GitOps).
* I am an application developer and want my latest changes to automatically go into my development environment.

== {fleet-product-name} with {rancher-prime}

Fleet is already deeply integrated as the Continuous Delivery tool and GitOps Engine in Rancher.

// - In future, we can have additional value adds like sharding controller (Manage shards for user) or notification controller (Event dispatcher/receiver) for prime customer only.
